# libudjathttp

./: .gitignore  CHANGELOG  Makefile.in  PKGBUILD.mingw  README.md  configure.ac  http.cbp  link.sh  meson.build  test.xml
.github/workflows/: codeql.yml  msys2.yml  publish.yml  wincheck.yml
conf/: 45-curl.conf
conf.d/: 10-curl-defaults.conf  45-curl.conf
debian/: changelog  control  libudjathttp.dsc  rules  udjat-module-http.dsc
po/: POTFILES.in  libudjathttp-1.2.pot  libudjathttp-2.0.pot  meson.build  pt_BR.po  udjathttp1.2.pot
rpm/: _service  _servicedata  libudjathttp.spec  mingw64-libudjathttp.spec  udjat-module-http.spec
sdk/linux/: static.pc.in
sdk/windows/: dynamic.pc.in  static.pc.in
src/: client.cc  exception.cc
src/include/: config.h.in  internals.h
src/include/private/: context.h  engine.h  handler.h  worker.h  writer.h
src/include/udjat/agent/: http.h
src/include/udjat/module/: http.h
src/include/udjat/tools/: http.h
src/include/udjat/tools/actions/: http.h
src/include/udjat/tools/http/: action.h  agent.h  worker.h
src/include/udjat/tools/url/handler/: http.h
src/module/: init.cc
src/os/linux/: curl.cc  http.cbp
src/os/windows/: base64.h  http.cbp  http.cc  worker.cc
src/testprogram/: testprogram.cc
src/testprogram/windows/: app-manifest.xml.in  resources.rc.in
win/: _service  mingw64-udjat-http.spec
